--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <div class="section-header-wrapper__subtitle">
                     Very professional and highly customizable sketch template with lots of custom pages and useful features
                     </div>
+                    <form action="">
                     <div class="section-header-wrapper__form">
                         <div class="section-header-wrapper__form-input" >
                             <input type="text"  placeholder="Your Name" />
@@ -26,9 +27,10 @@
                             <input type="text"  placeholder="Your Email" />
                         </div>
                         <div class="section-header-wrapper__form-button">
-                            <button class="btn-start">Get Started</button>
-                        </div>
+                            <button class="btn-main">Get Started</button>
+                        </div>  
                     </div>
+                </form>
                 </div>
             </div>
         </div>    
@@ -119,7 +121,7 @@
                     <div class="section-plans__list-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </div>  
                     <div class="section-plans__list-item__button">
-                    <a href="#" class="btn-start">Get Started</a>
+                    <a href="#" class="btn-main">Get Started</a>
                     </div>  
                 </div>
                 <div class="section-plans__list-item">
@@ -128,7 +130,7 @@
                     <div class="section-plans__list-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </div>  
                     <div class="section-plans__list-item__button">
-                    <a href="#" class="btn-start">Get Started</a>
+                    <a href="#" class="btn-secondary">Get Started</a>
                     </div>  
                 </div>
             </div>
@@ -139,7 +141,11 @@
     <!-- Free-->
     <section class="section-outer section-free">
         <div class="section-inner">
-
+            <div class="section-free__title">It’s free, Get started today</div>
+            <div class="section-free__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+            <div class="section-free__button">
+                <a href="#" class="btn-free">Get Started</a>
+            </div>
         </div>
     </section>
     <!-- /Free-->
@@ -147,6 +153,28 @@
     <!-- Footer-->
      <section class="section-outer section-footer">
         <div class="section-inner">
+            <div class="section-footer__logo">
+                Marketika
+            </div>
+            <ul class="section-footer__nav">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#" class="active">Services</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+            <div class="section-footer__copyright_and_links">
+                <div class="section-footer__copyright_and_links-copyright">
+                    Copyright © Sepra 2018 All Right Resereved
+                </div>
+                <div class="section-footer__copyright_and_links-links">
+                    <ul class="helper-link">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms Of Services</a></li>
+                        <li><a href="#">Security</a></li>
+                    </ul>
+                </div>
+            </div>
             
         </div>
     </section>
