--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <!-- Header-->
-    <section class="section-outer section-header">
+    <header class="section-outer section-header">
         <div class="section-inner">
             <div class="section-header-logo">Marketika</div>
             <div class="section-header-content">
                 <div class="section-header-wrapper">
-                    <div class="section-header-wrapper__title">We are here to help you out</div>
+                    <h1 class="section-header-wrapper__title">We are here to help you out</h1>
                     <div class="section-header-wrapper__subtitle">
                     Very professional and highly customizable sketch template with lots of custom pages and useful features
                     </div>
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>    
-    </section>
+    </header>
     <!-- /Header-->
 
     <!-- Promo-->
@@ -42,8 +42,8 @@
         <div class="section-inner">
             <div class="section-promo-1">
                 <div class="section-promo-1__content">
-                    <div class="title">Grow up your business with maketica maketing landing page
-                    </div>
+                    <h3 class="title">Grow up your business with maketica maketing landing page
+                    </h3>
                     <div class="description-item">
                         <div class="description-item__title">Increase your visitors</div>
                         <div class="description-item__text">
